fix Makefile.am formatting
Summary: D1798929 broke the automake folly build

Test Plan:
1. careful visual inspection
2. build

Reviewed By: alikhtarov@fb.com

Subscribers: folly-diffs@, yfeldblum

FB internal diff: D1906281

Signature: t1:1906281:1426106340:621f1e7d2fb18ae2ec5dc604dea0d8ad4353486e

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -76,7 +76,7 @@ nobase_follyinclude_HEADERS = \
 	experimental/io/FsUtil.h \
 	experimental/JSONSchema.h \
 	experimental/Select64.h \
-	experimental/SharedMutex.h
+	experimental/SharedMutex.h \
 	experimental/Singleton.h \
 	experimental/Singleton-inl.h \
 	experimental/TestUtil.h \
@@ -344,7 +344,7 @@ libfolly_la_SOURCES = \
 	experimental/io/FsUtil.cpp \
 	experimental/JSONSchema.cpp \
 	experimental/Select64.cpp \
-	experimental/SharedMutex.cpp
+	experimental/SharedMutex.cpp \
 	experimental/Singleton.cpp \
 	experimental/TestUtil.cpp \
 	wangle/acceptor/Acceptor.cpp \
