--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -79,6 +79,9 @@ nobase_follyinclude_HEADERS = \
 	experimental/SharedMutex.h \
 	experimental/Singleton.h \
 	experimental/Singleton-inl.h \
+	experimental/StringKeyedCommon.h
+	experimental/StringKeyedUnorderedMap.h \
+	experimental/StringKeyedUnorderedSet.h \
 	experimental/TestUtil.h \
 	FBString.h \
 	FBVector.h \
