fix typo: add backslash to Makefile.am
Summary: backslash

Test Plan: tests

Reviewed By: aap@fb.com

Subscribers: folly-diffs@, yfeldblum

FB internal diff: D1920872

Signature: t1:1920872:1426624366:c984fecb5bd0c292d5a8309fb320a48872fff6db

Blame Revision: D1890511

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -79,7 +79,7 @@ nobase_follyinclude_HEADERS = \
 	experimental/SharedMutex.h \
 	experimental/Singleton.h \
 	experimental/Singleton-inl.h \
-	experimental/StringKeyedCommon.h
+	experimental/StringKeyedCommon.h \
 	experimental/StringKeyedUnorderedMap.h \
 	experimental/StringKeyedUnorderedSet.h \
 	experimental/TestUtil.h \
