Add socket mocks
Summary: These parallel the MockTAsync* from thrift/lib/cpp/test.  Once all the users of the thrift versions are gone they can be deleted

Test Plan: Unit tests

Reviewed By: yfeldblum@fb.com, alandau@fb.com

Subscribers: doug, net-systems@, folly-diffs@, yfeldblum, chalfant

FB internal diff: D1959979

Signature: t1:1959979:1427917909:19af219f88dd6847a064da986dd30765e29bdc99

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -164,6 +164,10 @@ nobase_follyinclude_HEADERS = \
 	io/async/TimeoutManager.h \
 	io/async/test/AsyncSSLSocketTest.h \
 	io/async/test/BlockingSocket.h \
+	io/async/test/MockAsyncSocket.h \
+	io/async/test/MockAsyncServerSocket.h \
+	io/async/test/MockAsyncSSLSocket.h \
+	io/async/test/MockAsyncTransport.h \
 	io/async/test/TimeUtil.h \
 	io/async/test/UndelayedDestruction.h \
 	io/async/test/Util.h \
