Update Makefile.am for AsyncSignalHandler
Summary: facepalm

Test Plan: Built proxygen OSS that depends on this symbol

Reviewed By: davejwatson@fb.com

Subscribers: doug, folly-diffs@, yfeldblum, chalfant

FB internal diff: D1963679

Signature: t1:1963679:1428006035:2c4ceffc046b995431cde2fbcef757fa7ea1ea0b

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -147,6 +147,7 @@ nobase_follyinclude_HEADERS = \
 	io/async/AsyncUDPServerSocket.h \
 	io/async/AsyncUDPSocket.h \
 	io/async/AsyncServerSocket.h \
+	io/async/AsyncSignalHandler.h \
 	io/async/AsyncSocket.h \
 	io/async/AsyncSocketBase.h \
 	io/async/AsyncSSLSocket.h \
@@ -327,6 +328,7 @@ libfolly_la_SOURCES = \
 	io/async/AsyncTimeout.cpp \
 	io/async/AsyncUDPSocket.cpp \
 	io/async/AsyncServerSocket.cpp \
+	io/async/AsyncSignalHandler.cpp \
 	io/async/AsyncSocket.cpp \
 	io/async/AsyncSSLSocket.cpp \
 	io/async/EventBase.cpp \
