An IOExecutor that executes under mapped fiber context.
Summary:
This should help executing sync thrift handlers on fibers. This allows the handler methods to achieve concurrency by awaiting.

Test Plan: Chimera unit tests (which also accesses running FacebookBase methods in fiber context!)

Reviewed By: davejwatson@fb.com

Subscribers: trunkagent, hannesr, andrii, folly-diffs@, jsedgwick, haijunz, yfeldblum, alandau, chalfant

FB internal diff: D2015886

Signature: t1:2015886:1430156870:a84499e0e781f5e6e77f48f1f3063f53d0968698

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -83,6 +83,7 @@ nobase_follyinclude_HEADERS = \
 	experimental/fibers/ExecutionObserver.h \
 	experimental/fibers/Fiber.h \
 	experimental/fibers/Fiber-inl.h \
+	experimental/fibers/FiberIOExecutor.h \
 	experimental/fibers/FiberManager.h \
 	experimental/fibers/FiberManager-inl.h \
 	experimental/fibers/FiberManagerMap.h \
