Split HandlerContext and Pipeline into inl headers
Summary:
Leave the important headers visible. Opens the door for decent inline docs.

Test Plan: unit

Reviewed By: hans@fb.com

Subscribers: fugalh, folly-diffs@, jsedgwick, yfeldblum, chalfant

FB internal diff: D2036799

Signature: t1:2036799:1430749004:db5e58655c27b96826549849722fe962b9ae3985

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -278,8 +278,10 @@ nobase_follyinclude_HEADERS = \
 	wangle/channel/AsyncSocketHandler.h \
 	wangle/channel/Handler.h \
 	wangle/channel/HandlerContext.h \
+	wangle/channel/HandlerContext-inl.h \
 	wangle/channel/OutputBufferingHandler.h \
 	wangle/channel/Pipeline.h \
+	wangle/channel/Pipeline-inl.h \
 	wangle/channel/StaticPipeline.h \
 	wangle/concurrent/BlockingQueue.h \
 	wangle/concurrent/Codel.h \
