Extract TurnSequencer to detail/TurnSequencer
Summary:
A completely mechanical transformation that moves TurnSequencer into its own
header, to be used by other collections.

Test Plan: Existing tests.

Reviewed By: jmkaldor@fb.com

Subscribers: folly-diffs@, yfeldblum, chalfant

FB internal diff: D2065108

Signature: t1:2065108:1431474613:a3a9d063ebd2bedb31abb37be5fd33f0fb3eca6a

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -59,6 +59,7 @@ nobase_follyinclude_HEADERS = \
 	detail/SpinLockImpl.h \
 	detail/Stats.h \
 	detail/ThreadLocalDetail.h \
+	detail/TurnSequencer.h \
 	detail/UncaughtExceptionCounter.h \
 	Demangle.h \
 	DiscriminatedPtr.h \
