Add a guard page to a limited number of stacks
Summary:
GuardedPageAllocator now maintains a process-wide cache
of preallocated stacks with guard pages.  We can't create too many of these, since
each stack has the overhead of two memory mappings.  Once we run out of preallocated stacks
we simply fallback on the default allocator.

Test Plan:
unit tests

perflab
TAO unit tests

Reviewed By: pavlo@fb.com

Subscribers: zhuohuang, trunkagent, sameen, folly-diffs@, yfeldblum, chalfant

FB internal diff: D2129510

Tasks: 7319041

Signature: t1:2129510:1433542031:324942af3c9813344c1b331ee2c9b66c4bfa3f03

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -91,7 +91,6 @@ nobase_follyinclude_HEADERS = \
 	experimental/fibers/ForEach-inl.h \
 	experimental/fibers/GenericBaton.h \
 	experimental/fibers/GuardPageAllocator.h \
-	experimental/fibers/GuardPageAllocator-inl.h \
 	experimental/fibers/LoopController.h \
 	experimental/fibers/Promise.h \
 	experimental/fibers/Promise-inl.h \
@@ -400,6 +399,7 @@ libfolly_la_SOURCES = \
 	experimental/fibers/Fiber.cpp \
 	experimental/fibers/FiberManager.cpp \
 	experimental/fibers/FiberManagerMap.cpp \
+	experimental/fibers/GuardPageAllocator.cpp \
 	experimental/fibers/TimeoutController.cpp \
 	experimental/FunctionScheduler.cpp \
 	experimental/io/FsUtil.cpp \
