AsyncSocket::writeRequest() and its first user wangle::FileRegion
Summary: similar to D2050808, but move the functionality into AsyncSocket itself so that you have a consistent interface and contiguous writes for a single file

Test Plan: added unit, will hook this up to a file server example next

Reviewed By: davejwatson@fb.com

Subscribers: fugalh, net-systems@, folly-diffs@, jsedgwick, yfeldblum, chalfant

FB internal diff: D2084452

Signature: t1:2084452:1433181933:175158618966706db00bf6620cc86ae145d04ecf

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -282,6 +282,7 @@ nobase_follyinclude_HEADERS = \
 	wangle/bootstrap/ClientBootstrap.h \
 	wangle/channel/AsyncSocketHandler.h \
 	wangle/channel/EventBaseHandler.h \
+	wangle/channel/FileRegion.h \
 	wangle/channel/Handler.h \
 	wangle/channel/HandlerContext.h \
 	wangle/channel/HandlerContext-inl.h \
