Added fiber supported mutex to folly
Summary: To be able to use fiber lock in thrift

Reviewed By: @brianwatling, @yfeldblum

Differential Revision: D2149936

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -95,6 +95,9 @@ nobase_follyinclude_HEADERS = \
 	experimental/fibers/Promise.h \
 	experimental/fibers/Promise-inl.h \
 	experimental/fibers/SimpleLoopController.h \
+	experimental/fibers/TimedMutex.h \
+	experimental/fibers/TimedMutex-inl.h \
+	experimental/fibers/TimeoutController.h \
 	experimental/fibers/TimeoutController.h \
 	experimental/fibers/traits.h \
 	experimental/fibers/WhenN.h \
