rearrange Pipeline to have more functionality in PipelineBase
Summary: This way, handlers can carry out more complex manipulations of the pipeline via ctx->getPipeline() without knowing the R/W types

Reviewed By: @djwatson

Differential Revision: D2158736

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -420,6 +420,7 @@ libfolly_la_SOURCES = \
 	wangle/acceptor/SocketOptions.cpp \
 	wangle/acceptor/TransportInfo.cpp \
 	wangle/bootstrap/ServerBootstrap.cpp \
+	wangle/channel/Pipeline.cpp \
 	wangle/concurrent/CPUThreadPoolExecutor.cpp \
 	wangle/concurrent/Codel.cpp \
 	wangle/concurrent/IOThreadPoolExecutor.cpp \
