Remove double-conversion as a source dep in OS X script
double-conversion was recently added to homebrew, making it the last
folly dependency to do so. this diff modifies the existing OS X
bootstrap tool to account for that. I also added an rm for the gtest
wget, so there wasn't a leftover zip file in your repo. alternatively,
we could remove that and add it to the gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ autom4te.cache
 build-aux
 libtool
 folly/test/gtest-1.6.0
+folly/test/gtest-1.6.0.zip
 folly/folly-config.h
 folly/test/*_benchmark
 folly/test/*_test
