make it really clear that wangle/rx is deprecated
Summary: More people are starting to use Rx. Yay! But they're trying to use `wangle/rx`. So make sure there's no doubt about its deprecated status.

Reviewed By: @yfeldblum

Differential Revision: D2196273

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -308,11 +308,11 @@ nobase_follyinclude_HEADERS = \
 	wangle/concurrent/NamedThreadFactory.h \
 	wangle/concurrent/ThreadFactory.h \
 	wangle/concurrent/ThreadPoolExecutor.h \
-	wangle/rx/Observable.h \
-	wangle/rx/Observer.h \
-	wangle/rx/Subject.h \
-	wangle/rx/Subscription.h \
-	wangle/rx/types.h \
+	wangle/deprecated/rx/Observable.h \
+	wangle/deprecated/rx/Observer.h \
+	wangle/deprecated/rx/Subject.h \
+	wangle/deprecated/rx/Subscription.h \
+	wangle/deprecated/rx/types.h \
 	wangle/ssl/ClientHelloExtStats.h \
 	wangle/ssl/DHParam.h \
 	wangle/ssl/PasswordInFile.h \
