--- a/folly/test/Makefile.am
+++ b/folly/test/Makefile.am
@@ -186,6 +186,7 @@ futures_test_SOURCES = \
     ../futures/test/CollectTest.cpp \
     ../futures/test/ContextTest.cpp \
     ../futures/test/CoreTest.cpp \
+    ../futures/test/ThreadedExecutorTest.cpp \
     ../futures/test/EnsureTest.cpp \
     ../futures/test/ExecutorTest.cpp \
     ../futures/test/FSMTest.cpp \
