Add a compatibility shim for working with libevent on MSVC
MSVC builds of libevent expect `evutil_socket_t` to be `HANDLE` values, but Folly, HHVM, and Thrift all use them as file descriptors.
This adds a shim for the only method that needs it, `event_set`, and includes it where it's needed in Folly.
The shim is only enabled under MSVC, but it's safe to include the header from any platform.

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -73,6 +73,7 @@ nobase_follyinclude_HEADERS = \
 	Exception.h \
 	ExceptionWrapper.h \
 	Executor.h \
+	EventPortability.h \
 	EvictingCacheMap.h \
 	experimental/AutoTimer.h \
 	experimental/Bits.h \
@@ -312,6 +313,7 @@ libfolly_la_SOURCES = \
 	Bits.cpp \
 	detail/CacheLocality.cpp \
 	dynamic.cpp \
+	EventPortability.cpp \
 	File.cpp \
 	FileUtil.cpp \
 	FingerprintTables.cpp \
