--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -248,6 +248,7 @@ nobase_follyinclude_HEADERS = \
 	Random.h \
 	Random-inl.h \
 	Range.h \
+	ReadMostlyAtomicSharedPtr.h \
 	RWSpinLock.h \
 	ScopeGuard.h \
 	SharedMutex.h \
