Revert "Changed AC_LANG from PROGRAM to SOURCE to prevent double definition of main"
This reverts commit bb733f43b5674294a12c99ac3e686c4b54427917.

--- a/folly/configure.ac
+++ b/folly/configure.ac
@@ -236,7 +236,7 @@ AC_CACHE_CHECK(
   [for c++11 atomic support without GNU Atomic library],
   [folly_cv_lib_libatomic],
   [AC_LINK_IFELSE(
-    [AC_LANG_SOURCE[
+    [AC_LANG_PROGRAM[
       #include <atomic>
       int main() {
         struct Test { int val; };
