--- a/folly/test/Makefile.am
+++ b/folly/test/Makefile.am
@@ -143,6 +143,10 @@ synchronized_test_SOURCES = SynchronizedTest.cpp
 synchronized_test_LDADD = libfollytestmain.la
 TESTS += synchronized_test
 
+lock_traits_test_SOURCES = LockTraitsTest.cpp
+lock_traits_test_LDADD = libfollytestmain.la
+TESTS += lock_traits_test
+
 concurrent_skiplist_test_SOURCES = ConcurrentSkipListTest.cpp
 concurrent_skiplist_test_LDADD = libfollytestmain.la
 TESTS += concurrent_skiplist_test
