--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -229,6 +229,7 @@ nobase_follyinclude_HEADERS = \
 	Lazy.h \
 	LifoSem.h \
 	Likely.h \
+	Locked.h \
 	LockTraits.h \
 	LockTraitsBoost.h \
 	Logging.h \
@@ -314,6 +315,8 @@ nobase_follyinclude_HEADERS = \
 	test/FBVectorTestBenchmarks.cpp.h \
 	test/function_benchmark/benchmark_impl.h \
 	test/function_benchmark/test_functions.h \
+	test/LockedTestLib.h \
+	test/LockedTestLib-inl.h \
 	test/SynchronizedTestLib.h \
 	test/SynchronizedTestLib-inl.h \
 	test/TestUtils.h \
