Add libfollytestmain.la to mallctl's LDADD
Fixes make check problem for MallctlHelperTest

--- a/folly/test/Makefile.am
+++ b/folly/test/Makefile.am
@@ -290,6 +290,7 @@ ssl_test_LDADD = libfollytestmain.la -lcrypto
 TESTS += ssl_test
 
 mallctl_helper_test_SOURCES = MallctlHelperTest.cpp
+mallctl_helper_test_LDADD = libfollytestmain.la
 TESTS += mallctl_helper_test
 
 check_PROGRAMS += $(TESTS)
